--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,82 @@
     transform: rotate(360deg);
   }
 }
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap');
+
+:root{
+  --primary-white: #fff;
+  --primary-orange: #f9ab00;
+  --primary-dark: rgba(255,255,255,0);
+}
+
+body{
+  font-family: "Roboto Condesed";
+}
+/********************************NavBar*************/
+
+.logo1{
+  width: 5.25rem;
+}
+
+nav a.nav-link{
+  font-size: 0.8rem;
+  font-weight: 500;
+  letter-spacing: 0.0375rem;
+  cursor: pointer; 
+}
+nav ul li{
+  text-transform: uppercase;
+}
+.navbar-nav >li>a{
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+  color: var(--primary-white) !important;
+  border-top: 0.1875 solid var(--primary-dark);
+
+}
+.navbar-nav{
+  margin-left: 40%;
+  margin-top: -2%;
+}
+
+.navbar-brand{
+  max-width: 17.25rem;
+  padding: 0 !important;
+  height: 6rem !important;
+}
+.navbar-nav>li>a:focus {
+  border-top: 0.1875rem solid var(--primary-orange);
+}
+
+.navbar-nav > li >a:hover{
+  border-top: 0.1875rem solid var(--primary-orange);
+}
+/**************************Header***/
+
+.header-wraper {
+  position: relative;
+  background: url(laptopbg.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+.main-info{
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.main-info h1{
+  color: var(--primary-orange);
+  text-transform: uppercase;
+  
+}
